👷 Add scripts to build for all Minecraft versions